// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin options: segmentOrder (custom) validates body before query 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"type\\" must be one of [plastic, rubber, wood]",
        "path": Array [
          "type",
        ],
        "type": "any.only",
      },
    ],
    "message": "\\"type\\" must be one of [plastic, rubber, wood]",
    "segment": "body",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin options: segmentOrder (custom) validates body before query 2`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"count\\" is required",
        "path": Array [
          "count",
        ],
        "type": "any.required",
      },
    ],
    "message": "\\"count\\" is required",
    "segment": "query",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin options: segmentOrder (default) validates query before body 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"count\\" is required",
        "path": Array [
          "count",
        ],
        "type": "any.required",
      },
    ],
    "message": "\\"count\\" is required",
    "segment": "query",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin options: segmentOrder (default) validates query before body 2`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"type\\" must be one of [plastic, rubber, wood]",
        "path": Array [
          "type",
        ],
        "type": "any.only",
      },
    ],
    "message": "\\"type\\" must be one of [plastic, rubber, wood]",
    "segment": "body",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin segment validation validates body 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"type\\" must be one of [plastic, rubber, wood]",
        "path": Array [
          "type",
        ],
        "type": "any.only",
      },
    ],
    "message": "\\"type\\" must be one of [plastic, rubber, wood]",
    "segment": "body",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin segment validation validates headers 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"authorization\\" with value \\"JWT 42\\" fails to match the required pattern: /^Bearer .+$/",
        "path": Array [
          "authorization",
        ],
        "type": "string.pattern.base",
      },
    ],
    "message": "\\"authorization\\" with value \\"JWT 42\\" fails to match the required pattern: /^Bearer .+$/",
    "segment": "headers",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin segment validation validates params 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"id\\" must be a number",
        "path": Array [
          "id",
        ],
        "type": "number.base",
      },
    ],
    "message": "\\"id\\" must be a number",
    "segment": "params",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin segment validation validates query 1`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"count\\" is required",
        "path": Array [
          "count",
        ],
        "type": "any.required",
      },
    ],
    "message": "\\"count\\" is required",
    "segment": "query",
  },
}
`;

exports[`getJoiRequestValidatorPlugin joiRequestValidatorPlugin segment validation validates query 2`] = `
Object {
  "error": Object {
    "details": Array [
      Object {
        "message": "\\"count\\" must be a number",
        "path": Array [
          "count",
        ],
        "type": "number.base",
      },
    ],
    "message": "\\"count\\" must be a number",
    "segment": "query",
  },
}
`;
